ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geoserver
  annotations:
    kubernetes.io/ingress.class: "traefik"
    nginx.ingress.kubernetes.io/rewrite-target: /
    traefik.frontend.rule.type: PathPrefixStrip
    cert-manager.io/cluster-issuer: yeti-geoserver-issuer
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - geo.freeyeti.net
      secretName: yeti-geoserver-private-key
  rules:
    - host: geo.freeyeti.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: geoserver
                port:
                  number: 8080
