ingressroute.yaml
# initialization:
#
#  kubectl apply -f clusterissuer.yaml
#  kubectl apply -f certificate.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: geoserver-tls
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`geo.freeyeti.net`)
      services:
        - name: geoserver
          port: 8080
  tls:
    secretName: freeyeti-issuer-key
